Instructions with Arguments of One Extended Width Immediate

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -242,6 +242,23 @@ We assume the skip length $\ell$ is well-defined:
 \bottomrule
 \end{longtable}
 
+\subsubsection{Instructions with Arguments of One Extended Width Immediate}
+\begin{equation}
+\begin{aligned}
+  \immed_X \equiv \de_8(\instructions_{\imath+1\dots+8}))
+\end{aligned}
+\end{equation}
+
+\renewcommand*{\mrule}{\cmidrule(lr){1-4}}
+\begin{longtable}{p{8mm} p{25mm} p{5mm} p{100mm}}
+  \toprule
+  \thead{$\instructions_\imath$} & \thead{\textbf{Name}} & \thead{$\gas$} & \thead{\textbf{Mutations}} \\
+  \midrule
+  \endhead
+  ???&\token{load\_imm}&0&$\reg'_A = \immed_X$\\ \mrule
+\bottomrule
+\end{longtable}
+
 \subsubsection{Instructions with Arguments of Two Immediates}
 \begin{equation}
 \begin{aligned}
