Wording, subseqeq for memory access tests not in

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -414,8 +414,8 @@ We assume the skip length $\ell$ is well-defined:
   101&\token{sbrk}&0&$\begin{aligned}
     \reg'_D \equiv &\min(x \in \N_R): \\
     &x \ge h\\
-    &\N_{x\dots+\reg_A} \not\in \mathbb{V}_{\memory}\\
-    &\N_{x\dots+\reg_A} \in \mathbb{V}^*_{\memory'}
+    &\N_{x\dots+\reg_A} \not\subseteq \mathbb{V}_{\memory}\\
+    &\N_{x\dots+\reg_A} \subseteq \mathbb{V}^*_{\memory'}
   \end{aligned}$\\
 \bottomrule
 \end{longtable}
